--- a/dataCleanSP.ipynb
+++ b/dataCleanSP.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "id": "67a9a9ad-1e3c-4705-ae31-3d34436ceb45",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "028a38e3-06ce-4b08-917f-d7cab1995e1a",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "db0803a3-4461-4f71-865d-014e9750126a",
    "metadata": {},
    "outputs": [
@@ -196,7 +196,7 @@
        "4                       100       3         2     2    R$ 540.000  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "a70be416-636c-4cd8-abb4-99f26a680c29",
    "metadata": {},
    "outputs": [],
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f7efcb66-2af5-48cf-ae7a-b763fad7713b",
    "metadata": {},
    "outputs": [
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "id": "83588062-da17-4969-82c9-8d98ff306f90",
    "metadata": {},
    "outputs": [
@@ -474,7 +474,7 @@
        "array(['R$'], dtype=object)"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "903fa55c-bdab-433f-90fc-1c933595b051",
    "metadata": {},
    "outputs": [],
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "3f480912-c314-46a1-83ac-3aac9edd0e9f",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "4f6f5c79-47d3-4537-b69e-2d3a8c0da25d",
    "metadata": {},
    "outputs": [
@@ -554,7 +554,7 @@
        "       '46-50', '114'], dtype=object)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 15,
    "id": "f8a4c9d2-6114-4b3e-87aa-4bbf6c237bc3",
    "metadata": {},
    "outputs": [
@@ -672,7 +672,7 @@
        "[9181 rows x 2 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -683,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 16,
    "id": "2bf3f847-1952-4950-b238-2fe099f01ab1",
    "metadata": {},
    "outputs": [],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 17,
    "id": "e0e78ecb-dd63-4908-a3e6-1a716267d579",
    "metadata": {},
    "outputs": [
@@ -712,7 +712,7 @@
        "       '9', '13', '12', '16'], dtype=object)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -723,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "dfe9d270-9f76-42d6-b7d8-324bc6a58e89",
    "metadata": {},
    "outputs": [
@@ -830,7 +830,7 @@
        "[9181 rows x 2 columns]"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 19,
    "id": "3db78f52-858d-4742-aa4c-941092add0cd",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
        "Name: 0, Length: 9181, dtype: object"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 20,
    "id": "092252cb-2e58-46f5-b179-dc2e977db109",
    "metadata": {},
    "outputs": [],
@@ -891,7 +891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 21,
    "id": "bf2ad94e-149b-4eb7-8666-ec8642cf3cd1",
    "metadata": {},
    "outputs": [
@@ -902,7 +902,7 @@
        "       '12', '40', '14'], dtype=object)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 22,
    "id": "ca9a7576-7c18-45a6-b820-61f2f259d190",
    "metadata": {},
    "outputs": [
@@ -1020,7 +1020,7 @@
        "[9181 rows x 2 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1031,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 23,
    "id": "7068bcf6-db07-4485-aa5f-8df0427bd39a",
    "metadata": {},
    "outputs": [
@@ -1052,7 +1052,7 @@
        "Name: 0, Length: 9181, dtype: object"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1063,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 24,
    "id": "ec35306d-a820-4521-a32c-34d99da00639",
    "metadata": {},
    "outputs": [],
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 25,
    "id": "69616b6c-2003-4700-8e3b-8e739a6923c4",
    "metadata": {},
    "outputs": [
@@ -1093,7 +1093,7 @@
        "       '18', '50'], dtype=object)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "id": "5ddfc8ee-5462-4c3b-b273-46358e511984",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1211,7 @@
        "[9181 rows x 2 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 27,
    "id": "f0369865-5462-4ead-a290-80403842736b",
    "metadata": {},
    "outputs": [
@@ -1243,7 +1243,7 @@
        "Name: 0, Length: 9181, dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1254,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 28,
    "id": "b9504028-cc36-4aee-9153-bd8d9f81550b",
    "metadata": {},
    "outputs": [],
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "id": "3f94fe32-d005-45e7-8df1-95c2c05cd663",
    "metadata": {},
    "outputs": [
@@ -1439,7 +1439,7 @@
        "4            3              2          2  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1450,7 +1450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 30,
    "id": "7b64a825-d5f8-4988-9dcf-23548d20d3a7",
    "metadata": {},
    "outputs": [
@@ -1480,7 +1480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 31,
    "id": "4e2c7390-5f18-4026-b52a-519e5fa25561",
    "metadata": {},
    "outputs": [],
@@ -1491,7 +1491,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1505,7 +1505,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
