Data visualization fixed

--- a/dataVisualization.ipynb
+++ b/dataVisualization.ipynb
@@ -330,7 +330,7 @@
    "id": "6df9c083-c481-4aeb-9acd-21fdf8fb292a",
    "metadata": {},
    "source": [
-    "### 4.2 - Boxplots"
+    "### 4.2 - Boxplots das features dos imóveis"
    ]
   },
   {
@@ -441,7 +441,7 @@
    "id": "2419a0e8-e519-41b2-9242-4fcf27bd629a",
    "metadata": {},
    "source": [
-    "### 4.3 - Gráfico de dispersão "
+    "### 4.3 - Gráfico de dispersão da área (m²) e o custo dos imóveis (R$)"
    ]
   },
   {
