Aplicando Machine Learning

--- a/dataCleanSP.ipynb
+++ b/dataCleanSP.ipynb
@@ -54,10 +54,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import statistics as st\n",
-    "import seaborn as sns\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
+    "import statistics as st"
    ]
   },
   {
