--- a/dataVisualization.ipynb
+++ b/dataVisualization.ipynb
@@ -25,6 +25,17 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "efc3a9dc-6d2c-4ca8-83c2-89ffe0ac8d5f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "2418e265-25aa-4165-8eec-aec6e55e58b7",
    "metadata": {},
    "outputs": [],
@@ -34,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f7b79c3f-e996-4d7d-917e-3f1464cafdba",
    "metadata": {},
    "outputs": [
@@ -127,7 +138,7 @@
        "4             540000.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "002328a1-d6db-486e-a7e8-c3d2c70938f7",
    "metadata": {},
    "outputs": [
@@ -261,7 +272,7 @@
        "max           6.500000e+07  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "dbaecb35-ed1a-4d3b-b569-ad92c8542d7b",
    "metadata": {},
    "outputs": [
@@ -322,7 +333,8 @@
    "id": "eb90f302-4e4a-402e-9a91-a5bc2a869bcd",
    "metadata": {},
    "source": [
-    " - Maior concentração de imóveis estão na faixa de preço de R$ 1.000.000,00 (um milão de reais)"
+    " - Maior concentração de imóveis estão na faixa de preço de R$ 1.000.000,00 (um milão de reais).\n",
+    " - Essa assimetria será tratada no futuro no momento de aplicar técnicas de Machine Learning."
    ]
   },
   {
@@ -335,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "04c957cf-a54a-48f5-8dde-32ce138af2ee",
    "metadata": {},
    "outputs": [
@@ -369,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "410d2ea0-ab16-4f9b-9733-5c31bb7e275d",
    "metadata": {},
    "outputs": [
@@ -403,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e3e0940e-bd74-4c7e-ab32-aef507260bc6",
    "metadata": {},
    "outputs": [
@@ -446,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "d2b9585b-8c57-4405-9f33-055d2ea98a71",
    "metadata": {},
    "outputs": [
@@ -480,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "fece0b9c-2694-4c5c-bdc9-a97b381cb569",
    "metadata": {},
    "outputs": [
